# aries-vcr-vc-service

./: .dockerignore  .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
app/: __init__.py
app/enums/: credential_format.py
app/models/: __init__.py  credential.py  credential_type.py  options.py  presentation.py  proof.py  web_requests.py
app/models/enums/: __init__.py  credential_format.py  credential_mapping_type.py
app/models/mappings/: __init__.py  vcr_credential.py  vcr_credential_type.py
app/routers/: credential.py  credential_type.py
app/schemas/: __init__.py  credential.py  credential_mapping.py  credential_topic.py  credential_type.py  options.py  presentation.py  proof.py  secured_credential_with_options.py  signed.py  signed_credential.py  signed_credential_type.py  web_requests.py
app/schemas/mappings/: vcr_credential.py  (+1 more)
app/services/: vcr.py  verifier.py
cli/: issuer.py
docker/: Dockerfile  docker-compose.yml
enums/: credential_mapping_type.py
routers/: credential.py  credential_type.py
schemas/: __init__.py  credential_mapping.py  credential_topic.py  credential_type.py  data_integrity_proof.py  issuer.py  options.py  path.py  secured_credential_with_options.py  secured_document.py  signed.py  signed_credential.py  signed_credential_type.py
schemas/base/: __init__.py  path.py
schemas/mappings/: vcr_credential.py  vcr_credential_type.py
services/: __init__.py  vcr.py  verifier.py
tests/: data.py  test_app.py  test_credential_router.py  test_credential_type_router.py  test_mappings.py  test_schemas.py
