[tool.poetry]
name = "aries-vcr-vc-service"
version = "0.1.0"
description = ""
authors = ["Akiff Manji <akiff.manji@quartech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pytest = "^8.3.2"
httpx = "^0.27.0"
pydantic-settings = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
